New goodmoves design work in progress

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -2,21 +2,23 @@
 $mdc-theme-primary: #3c7524;
 $mdc-theme-primary-light: #d1edc4;
 $mdc-theme-primary-dark: #1e3b12;
-$mdc-theme-old: #58a934;
+// $mdc-theme-old: #58a934;
 
-$mdc-theme-secondary: #424242;
-$mdc-theme-secondary-light: #f5f5f5;
-$mdc-theme-secondary-dark: darken($mdc-theme-secondary, 10%);
+$mdc-theme-complimentary: #D1C4E9; // Deep purple 100
+$mdc-theme-complimentary-light: #EDE7F6; // Deep purple 50
+$mdc-theme-complimentary-dark: #4527A0; // Deep purple 800
 
-$mdc-theme-footer: #37474F;
-$mdc-theme-footer-light: #455A64;
-$mdc-theme-footer-dark: #263238;
+$mdc-theme-secondary: #E0E0E0; // Gray 300
+$mdc-theme-secondary-light: #f5f5f5; // Gray 100
+$mdc-theme-secondary-dark: #212121; // Gray 900
+
+$mdc-theme-footer: #37474F; // Blue Gray 800
+$mdc-theme-footer-light: #455A64; // Blue Gray 700
+$mdc-theme-footer-dark: #263238; // Blue Gray 900
 
 $mdc-theme-error: #a93f34;
 
 $mdc-theme-tfn: #3b9db1;
-
-$mdc-theme-background: white;
 
 $base-font-family:                  "Open Sans", Helvetica, Arial, sans-serif;
 $base-font-weight:                  400;
@@ -55,12 +57,12 @@ header {
   .container-fluid {
     padding: 0;
     .mdc-top-app-bar__section--align-start {
-      background-image: linear-gradient(60deg, $mdc-theme-primary, $mdc-theme-primary 300px, $mdc-theme-old 301px, $mdc-theme-old);
+      // background-image: linear-gradient(60deg, $mdc-theme-primary, $mdc-theme-primary 300px, $mdc-theme-old 301px, $mdc-theme-old);
       min-width: 320px;
     }
     .mdc-top-app-bar__section--align-end {
       padding-right: $unit/2 !important;
-      background-image: linear-gradient(60deg, $mdc-theme-old, $mdc-theme-old 63px, white 64px, white);
+      // background-image: linear-gradient(60deg, $mdc-theme-old, $mdc-theme-old 63px, white 64px, white);
     }
     .mdc-top-app-bar__title {
       padding: 0;
@@ -124,13 +126,13 @@ header {
       .mdc-top-app-bar__navigation-icon,
       .mdc-button,
       .mdc-tab {
-        font-weight: 500;
+        font-weight: 600;
       }
       .mdc-top-app-bar__action-item:hover,
       .mdc-top-app-bar__navigation-icon:hover,
       .mdc-button:hover,
       .mdc-tab:hover {
-        color: black;
+        // color: black;
       }
     }
   }
@@ -404,7 +406,7 @@ a {
 .search-info {
   margin: $unit*1.5 0 $unit*(3/4);
   background: white;
-  color: $mdc-theme-secondary;
+  color: $mdc-theme-secondary-dark;
   padding: $unit/3 $unit/2;
   box-sizing: border-box;
 }
@@ -423,7 +425,7 @@ a {
     margin: 0;
   }
   .mdc-card__actions {
-    background-color: $mdc-theme-primary;
+    background-color: $mdc-theme-complimentary;
     min-height: auto;
     a {
       color: white;
@@ -431,7 +433,7 @@ a {
     .mdc-card__action {
       font-weight: 600;
       margin-right: $unit;
-      color: white;
+      color: $mdc-theme-secondary-dark;
     }
     .mdc-card__action:last-child {
       margin-right: 0;
@@ -460,15 +462,15 @@ a {
   }
   .search-result-article__snippet {
     padding: $unit;
-    background-color: $mdc-theme-primary-light;
+    background-color: $mdc-theme-complimentary-light;
   }
   .user-notes {
     display: none;
   }
   .mdc-card__actions {
-    background-color: $mdc-theme-primary;
+    background-color: $mdc-theme-complimentary;
     .mdc-card__action {
-      color: white;
+      color: $mdc-theme-secondary-dark;
     }
   }
 }
@@ -677,6 +679,7 @@ hr {
         height: $nav-height;
         .fa-circle {
           font-size: $nav-height;
+          color: white;
         }
         .fa-star {
           font-size: 25px;
@@ -685,11 +688,11 @@ hr {
       }
     }
     .mdc-card__action--shortlist .fa-star {
-      color: $mdc-theme-primary;
+      color: $mdc-theme-complimentary-dark;
     }
     .mdc-card__action--shortlist:hover .fa-star {
       font-weight: 900;
-      color: $mdc-theme-primary-dark;
+      // color: $mdc-theme-complimentary-dark;
     }
   }
 }
@@ -700,7 +703,7 @@ hr {
     }
     .mdc-card__action--shortlist:hover .fa-star {
       font-weight: 400;
-      color: $mdc-theme-primary-dark;
+      color: $mdc-theme-complimentary-dark;
     }
   }
 }
@@ -771,23 +774,28 @@ hr {
   }
 }
 
+.container-content,
+#search-tab-bar,
+#home-tab-bar {
+  .mdc-tab {
+    color: $mdc-theme-secondary-dark;
+  }
+  .mdc-tab-bar__indicator {
+    background-color: $mdc-theme-secondary-dark;
+  }
+}
+
 .container-content {
   width: 100%;
   padding-right: $unit;
   position: relative;
   max-width: 1100px;
   align-items: flex-end;
-  .container-fluid {
-    position: relative;
-  }
   .mdc-tab-bar {
     width: 100%;
-    .mdc-tab {
-      color: $mdc-theme-secondary;
-    }
-    .mdc-tab-bar__indicator {
-      background-color: $mdc-theme-secondary;
-    }
+  }
+  .container-fluid {
+    position: relative;
   }
   // .search-overlay {
   //   padding: 0;
@@ -872,6 +880,7 @@ body {
         text-align: center;
         white-space: nowrap;
         vertical-align: baseline;
+        color: $mdc-theme-secondary-dark;
         background-color: $mdc-theme-secondary !important;
         border-radius: $unit;
         position: relative;
@@ -880,7 +889,6 @@ body {
         font-size: 1rem;
         height: $unit*1.5;
         box-sizing: border-box;
-        color: white;
       }
     }
     .fa-ul {
@@ -939,7 +947,7 @@ body {
       margin: 0;
     }
     .fa-li .fa-fw {
-      color: $mdc-theme-secondary;
+      color: $mdc-theme-secondary-dark;
     }
   }
   .mdc-card__info--vacancy-row,
@@ -1008,20 +1016,20 @@ body {
       line-height: $unit*2.5;
       height: $unit*2.5;
       width: $unit*2.5;
-      color: black;
+      color: $mdc-theme-secondary-dark;
       padding: 0;
       margin: 0;
       font-weight: 600;
       display: block;
     }
     a.pagination-arrow {
-      color: black;
+      color: $mdc-theme-secondary-dark;
       vertical-align: middle;
     }
   }
   li.disabled a.pagination-arrow {
     cursor: default;
-    color: $mdc-theme-secondary;
+    color: $mdc-theme-secondary-dark;
   }
   li:first-child a {
     padding-left: 0;
@@ -1030,17 +1038,17 @@ body {
     padding-right: 0;
   }
   li.current-page {
-    background-color: $mdc-theme-primary;
+    background-color: $mdc-theme-complimentary;
     border-radius: 50%;
     a {
-      color: white;
+      // color: white;
     }
   }
   li:hover,
   li.current-page:hover {
-    background-color: $mdc-theme-primary-dark;
+    background-color: $mdc-theme-complimentary-dark;
     a {
-      color: white;
+      color: $mdc-theme-secondary-light;
       text-decoration: none;
     }
   }
@@ -1087,18 +1095,20 @@ body {
   margin: 0;
 }
 
-.banner-search {
-  background-color: #d1edc4;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 56 28' width='56' height='28'%3E%3Cpath fill='%233c7524' fill-opacity='0.26' d='M56 26v2h-7.75c2.3-1.27 4.94-2 7.75-2zm-26 2a2 2 0 1 0-4 0h-4.09A25.98 25.98 0 0 0 0 16v-2c.67 0 1.34.02 2 .07V14a2 2 0 0 0-2-2v-2a4 4 0 0 1 3.98 3.6 28.09 28.09 0 0 1 2.8-3.86A8 8 0 0 0 0 6V4a9.99 9.99 0 0 1 8.17 4.23c.94-.95 1.96-1.83 3.03-2.63A13.98 13.98 0 0 0 0 0h7.75c2 1.1 3.73 2.63 5.1 4.45 1.12-.72 2.3-1.37 3.53-1.93A20.1 20.1 0 0 0 14.28 0h2.7c.45.56.88 1.14 1.29 1.74 1.3-.48 2.63-.87 4-1.15-.11-.2-.23-.4-.36-.59H26v.07a28.4 28.4 0 0 1 4 0V0h4.09l-.37.59c1.38.28 2.72.67 4.01 1.15.4-.6.84-1.18 1.3-1.74h2.69a20.1 20.1 0 0 0-2.1 2.52c1.23.56 2.41 1.2 3.54 1.93A16.08 16.08 0 0 1 48.25 0H56c-4.58 0-8.65 2.2-11.2 5.6 1.07.8 2.09 1.68 3.03 2.63A9.99 9.99 0 0 1 56 4v2a8 8 0 0 0-6.77 3.74c1.03 1.2 1.97 2.5 2.79 3.86A4 4 0 0 1 56 10v2a2 2 0 0 0-2 2.07 28.4 28.4 0 0 1 2-.07v2c-9.2 0-17.3 4.78-21.91 12H30zM7.75 28H0v-2c2.81 0 5.46.73 7.75 2zM56 20v2c-5.6 0-10.65 2.3-14.28 6h-2.7c4.04-4.89 10.15-8 16.98-8zm-39.03 8h-2.69C10.65 24.3 5.6 22 0 22v-2c6.83 0 12.94 3.11 16.97 8zm15.01-.4a28.09 28.09 0 0 1 2.8-3.86 8 8 0 0 0-13.55 0c1.03 1.2 1.97 2.5 2.79 3.86a4 4 0 0 1 7.96 0zm14.29-11.86c1.3-.48 2.63-.87 4-1.15a25.99 25.99 0 0 0-44.55 0c1.38.28 2.72.67 4.01 1.15a21.98 21.98 0 0 1 36.54 0zm-5.43 2.71c1.13-.72 2.3-1.37 3.54-1.93a19.98 19.98 0 0 0-32.76 0c1.23.56 2.41 1.2 3.54 1.93a15.98 15.98 0 0 1 25.68 0zm-4.67 3.78c.94-.95 1.96-1.83 3.03-2.63a13.98 13.98 0 0 0-22.4 0c1.07.8 2.09 1.68 3.03 2.63a9.99 9.99 0 0 1 16.34 0z'%3E%3C/path%3E%3C/svg%3E");
-  .content {
-    background-color: rgba(255, 255, 255, 0.7);
-    padding: $unit $unit*2;
-    margin: $unit*3 0;
-    .mdc-button--search {
-      width: 100%;
-      .fa-search {
-        position: absolute;
-        right: $unit*.75;
+.home-banner {
+  background-size: contain;
+  background-repeat: no-repeat;
+  .banner-search {
+    .content {
+      background-color: rgba(255, 255, 255, 0.9);
+      padding: $unit $unit*2;
+      margin: $unit*3 0;
+      .mdc-button--search {
+        width: 100%;
+        .fa-search {
+          position: absolute;
+          right: $unit*.75;
+        }
       }
     }
   }
@@ -1129,7 +1139,7 @@ body {
     .mdc-card__subtitle {
       font-weight: 400;
       margin: $unit/2 0;
-      color: $mdc-theme-secondary;
+      color: $mdc-theme-secondary-dark;
     }
     .thumbnail img {
       border-radius: 50%;
