Updated content for Scotland for Europe campaign

--- a/db/configurations/digitalparticipation/layouts/default.hbs
+++ b/db/configurations/digitalparticipation/layouts/default.hbs
@@ -44,7 +44,7 @@
   </script>
 </head>
 <body class="{{#if request.params.path}}{{replace request.params.path '_' ' '}}{{else}}home{{/if}}">
-  <scvo-site>
+  <charter-site>
     <div class="mdc-typography">
       <main>
         <header class="mdc-toolbar">
@@ -162,7 +162,7 @@
         </div>
       </footer>
     </div>
-  </scvo-site>
+  </charter-site>
   <script type="text/javascript" src="/assets/js/material-components-web.js"></script>
   <script type="text/javascript" id="cookieinfo" src="/assets/js/cookieinfo.min.js" data-bg="#02162E" data-fg="#FFFFFF" data-link="#FFFFFF" data-divlink="#FFFFFF" data-divlinkbg="#022347" data-moreinfo="/privacy-cookies-policy" data-cookie="CookieInfoScript" data-text-align="left"></script>
   <script type="text/javascript" src="/assets/js/digitalparticipation/root.js"></script>
