--- a/db/configurations/scotlandforeurope/templates/home.hbs
+++ b/db/configurations/scotlandforeurope/templates/home.hbs
@@ -1,9 +1,13 @@
+<h3>
+  Scotland for Europe is a Scottish civil society campaign to stay in the EU.
+</h3>
+
 <p>
-  Coming soon
+  This campaign is designed to show that the majority support in Scotland for ‘remain’ has not gone away.
 </p>
 
 <p>
-  Please <a href="/sign-up">sign up</a> to support.
+  Scotland for Europe is and shall remain a grass-roots, networked campaign.
 </p>
 
 <p>
