--- a/db/configurations/humanrightsdeclaration/layouts/default.hbs
+++ b/db/configurations/humanrightsdeclaration/layouts/default.hbs
@@ -43,7 +43,7 @@
   </script>
 </head>
 <body class="{{#if request.params.path}}{{replace request.params.path '_' ' '}}{{else}}home{{/if}}">
-  <scvo-site>
+  <charter-site>
     <div class="mdc-typography">
       <header class="mdc-toolbar">
         <div class="mdc-toolbar__row">
@@ -105,61 +105,60 @@
                   <p>
                     The <strong>Scotland Declaration on Human Rights</strong> is run by the
                     <a href="https://scvo.org">Scottish Council for Voluntary Organisations</a>
-                    with support from <a href="https://hrcscotland.org">Human Rights Consortium Scotland</a>, <a href="http://www.scottishhumanrights.com">Scottish Human Rights
-                      Commission</a> and the <a href="https://www.equalityhumanrights.com">Equality and Human Rights Commission</a>
-                    </p>
-                    <a href="https://www.equalityhumanrights.com" class="brand-logo" title="Equality Human Rights Scotland">
-                      <img src="https://storage.googleapis.com/human-rights-declaration/ehrc-logo.svg" />
-                    </a>
-                    <a href="http://www.scottishhumanrights.com" class="brand-logo" title="Scottish Human Rights Commission">
-                      <img src="https://storage.googleapis.com/human-rights-declaration/shrc-logo.svg" style="max-width:none; height:44px; filter: brightness(0) invert(1);" />
-                    </a>
-                    <a href="https://hrcscotland.org" class="brand-logo" title="Human Rights Consortium Scotland">
-                      <img src="https://storage.googleapis.com/human-rights-declaration/hrcs-logo.jpg" style="filter: grayscale(100%) invert(1); mix-blend-mode: screen;" />
-                    </a>
-                  </div>
-                  <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-3-desktop">
-                    <h3>Help</h3>
-                    <ul class="mdc-list">
-                      <li class="mdc-list-item">
-                        <a href="/accessibility">Accessibility</a>
-                      </li>
-                      <li class="mdc-list-item">
-                        <a href="/privacy-and-cookies">Privacy &amp; cookies policy</a>
-                      </li>
-                      <li class="mdc-list-item">
-                        <a href="/terms-and-conditions">Terms &amp; conditions</a>
-                      </li>
-                    </ul>
-                  </div>
+                    with support from <a href="https://hrcscotland.org">Human Rights Consortium Scotland</a>, <a href="http://www.scottishhumanrights.com">Scottish Human Rights Commission</a> and the <a href="https://www.equalityhumanrights.com">Equality and Human Rights Commission</a>
+                  </p>
+                  <a href="https://www.equalityhumanrights.com" class="brand-logo" title="Equality Human Rights Scotland">
+                    <img src="https://storage.googleapis.com/human-rights-declaration/ehrc-logo.svg" />
+                  </a>
+                  <a href="http://www.scottishhumanrights.com" class="brand-logo" title="Scottish Human Rights Commission">
+                    <img src="https://storage.googleapis.com/human-rights-declaration/shrc-logo.svg" style="max-width:none; height:44px; filter: brightness(0) invert(1);" />
+                  </a>
+                  <a href="https://hrcscotland.org" class="brand-logo" title="Human Rights Consortium Scotland">
+                    <img src="https://storage.googleapis.com/human-rights-declaration/hrcs-logo.jpg" style="filter: grayscale(100%) invert(1); mix-blend-mode: screen;" />
+                  </a>
+                </div>
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-3-desktop">
+                  <h3>Help</h3>
+                  <ul class="mdc-list">
+                    <li class="mdc-list-item">
+                      <a href="/accessibility">Accessibility</a>
+                    </li>
+                    <li class="mdc-list-item">
+                      <a href="/privacy-and-cookies">Privacy &amp; cookies policy</a>
+                    </li>
+                    <li class="mdc-list-item">
+                      <a href="/terms-and-conditions">Terms &amp; conditions</a>
+                    </li>
+                  </ul>
                 </div>
               </div>
             </div>
           </div>
-          <div class="footer-copyright">
-            <div class="container-fluid">
-              <div class="mdc-layout-grid">
-                <div class="mdc-layout-grid__inner">
-                  <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-9-desktop">
-                    <p>
-                      &copy; {{momentFormat (moment) "YYYY"}}. The Scottish Council for Voluntary Organisations (SCVO) is a Scottish Charitable Incorporated Organisation. Charity registered in Scotland <a href="https://www.oscr.org.uk/about-charities/search-the-register/charity-details?number=SC003558">SC003558</a>. Registered office Mansfield Traquair Centre, 15 Mansfield Place, Edinburgh EH3 6BB.
-                    </p>
-                  </div>
-                  <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-3-desktop">
-                    <a href="https://scvo.org" title="Scottish Council for Voluntary Organisations">
-                      <img src="/assets/images/scvo-logo.png" alt="Scottish Council for Voluntary Organisations" class="logo scvo" />
-                    </a>
-                  </div>
+        </div>
+        <div class="footer-copyright">
+          <div class="container-fluid">
+            <div class="mdc-layout-grid">
+              <div class="mdc-layout-grid__inner">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-9-desktop">
+                  <p>
+                    &copy; {{momentFormat (moment) "YYYY"}}. The Scottish Council for Voluntary Organisations (SCVO) is a Scottish Charitable Incorporated Organisation. Charity registered in Scotland <a href="https://www.oscr.org.uk/about-charities/search-the-register/charity-details?number=SC003558">SC003558</a>. Registered office Mansfield Traquair Centre, 15 Mansfield Place, Edinburgh EH3 6BB.
+                  </p>
+                </div>
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-3-desktop">
+                  <a href="https://scvo.org" title="Scottish Council for Voluntary Organisations">
+                    <img src="/assets/images/scvo-logo.png" alt="Scottish Council for Voluntary Organisations" class="logo scvo" />
+                  </a>
                 </div>
               </div>
             </div>
           </div>
-        </footer>
-      </div>
-    </scvo-site>
-    <script type="text/javascript" src="/assets/js/material-components-web.js"></script>
-    <script type="text/javascript" id="cookieinfo" src="/assets/js/cookieinfo.min.js" data-bg="#2C2C2B" data-fg="#FFFFFF" data-link="#FFFFFF" data-divlink="#FFFFFF" data-divlinkbg="#022347" data-moreinfo="/privacy-cookies-policy" data-cookie="CookieInfoScript" data-text-align="left"></script>
-    <script type="text/javascript" src="/assets/js/humanrightsdeclaration/root.js"></script>
-    <!--{section:foot}-->
-  </body>
-  </html>
+        </div>
+      </footer>
+    </div>
+  </charter-site>
+  <script type="text/javascript" src="/assets/js/material-components-web.js"></script>
+  <script type="text/javascript" id="cookieinfo" src="/assets/js/cookieinfo.min.js" data-bg="#2C2C2B" data-fg="#FFFFFF" data-link="#FFFFFF" data-divlink="#FFFFFF" data-divlinkbg="#022347" data-moreinfo="/privacy-cookies-policy" data-cookie="CookieInfoScript" data-text-align="left"></script>
+  <script type="text/javascript" src="/assets/js/humanrightsdeclaration/root.js"></script>
+  <!--{section:foot}-->
+</body>
+</html>
