--- a/db/configurations/scotlandforeurope/templates/declaration.hbs
+++ b/db/configurations/scotlandforeurope/templates/declaration.hbs
@@ -1,13 +1,15 @@
 <h1>Declaration: Scotland for Europe</h1>
 
-<p>
-  "We the undersigned declare that we believe the best future for our community is to remain within the European Union. We oppose the removal of our European citizenship and rights.
-</p>
+<blockquote>
+  <p>
+    “We the undersigned declare that we believe the best future for our community is to remain within the European Union. We oppose the removal of our European citizenship and rights.
+  </p>
 
-<p>
-  "Scotland voted clearly and decisively across the country to remain within the European Union. Nothing in our future relationship with the European Union is inevitable, we can change course and build the society we choose.
-</p>
+  <p>
+    Scotland voted clearly and decisively across the country to remain within the European Union. Nothing in our future relationship with the European Union is inevitable, we can change course and build the society we choose.
+  </p>
 
-<p>
-  "We hereby commit to work with and support people and organisations of all political views and of none to maintain our European Union membership."
-</p>
+  <p>
+    We hereby commit to work with and support people and organisations of all political views and of none to maintain our European Union membership.”
+  </p>
+</blockquote>
