--- a/assets/css/scotlandforeurope-styles.scss
+++ b/assets/css/scotlandforeurope-styles.scss
@@ -680,6 +680,9 @@ footer {
     display: block;
   }
   .mdc-toolbar {
+    .navbar {
+      display: none;
+    }
     .mdc-toolbar__title {
       .brand-logo {
         .brand-logo-mobile {
@@ -700,6 +703,7 @@ footer {
       top: 0;
       right: 0;
       z-index: 3;
+      color: white;
     }
     .mdc-toolbar__icon--menu:focus {
       outline: none;
