--- a/db/configurations/scotlandforeurope/layouts/default.hbs
+++ b/db/configurations/scotlandforeurope/layouts/default.hbs
@@ -24,7 +24,8 @@
   <meta name="theme-color" content="#00838f">
   <link type="text/css" rel="stylesheet" href="/assets/css/material-components-web.min.css">
   <link type="text/css" rel="stylesheet" href="/assets/fonts/fontawesome/css/fontawesome-all.min.css">
-  <link type="text/css" rel="stylesheet" href="/assets/css/scotlandforeurope-styles.css">
+  <!-- <link type="text/css" rel="stylesheet" href="/assets/css/scotlandforeurope-styles.css"> -->
+  <link type="text/css" rel="stylesheet" href="  https://storage.googleapis.com/scvo-assets/temporary/scotlandforeurope-styles.css">
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-3467930-31"></script>
   <script>
   window.dataLayer = window.dataLayer || [];
