--- a/assets/css/scotlandforeurope-styles.scss
+++ b/assets/css/scotlandforeurope-styles.scss
@@ -66,12 +66,15 @@ main {
 
 .mdc-temporary-drawer {
   display: none;
+  .mdc-temporary-drawer__header {
+    background-color: $mdc-theme-primary;
+  }
   .mdc-temporary-drawer__header-content {
     direction: ltr;
-    padding: $unit;
+    padding: 0;
   }
   .mdc-temporary-drawer__header:before {
-    padding-top: 24%;
+    padding-top: 71%;
   }
   .mdc-list-group {
     direction: ltr;
@@ -98,7 +101,6 @@ main {
   }
 }
 
-.mdc-temporary-drawer__header,
 .hide-on-med-and-up {
   display: none;
 }
