--- a/db/configurations/scotlandforeurope/layouts/default.hbs
+++ b/db/configurations/scotlandforeurope/layouts/default.hbs
@@ -52,8 +52,8 @@
             <section class="mdc-toolbar__section mdc-toolbar__section--align-start">
               <span class="mdc-toolbar__title catalog-title">
                 <a href="/" class="brand-logo" title="Scotland for Europe">
-                  <img src="/assets/images/sfe-logo-mobile.png" class="brand-logo-mobile" />
-                  <img src="/assets/images/sfe-logo.png" class="brand-logo-desktop" />
+                  <img src="https://storage.googleapis.com/scvo-assets/assets/images/sfe-logo-mobile.png" class="brand-logo-mobile" />
+                  <img src="https://storage.googleapis.com/scvo-assets/assets/images/sfe-logo-desktop.png" class="brand-logo-desktop" />
                 </a>
               </span>
               <button id="menu_button" class="menu mdc-toolbar__icon mdc-toolbar__icon--menu" onclick="window.drawer.open = true">
@@ -79,7 +79,7 @@
         <nav class="mdc-temporary-drawer__drawer">
           <header class="mdc-temporary-drawer__header">
             <div class="mdc-temporary-drawer__header-content mdc-theme--text-primary-on-primary">
-              <img src="https://storage.googleapis.com/scotland-for-europe/sfe-logo.png" class="brand-logo-mobile" />
+              <img src="https://storage.googleapis.com/scvo-assets/assets/images/sfe-logo-mobile.png" class="brand-logo-mobile" />
             </div>
           </header>
           <nav class="mdc-temporary-drawer__content mdc-list-group">
