Fixed some links

--- a/db/configurations/digitalparticipation/layouts/default.hbs
+++ b/db/configurations/digitalparticipation/layouts/default.hbs
@@ -164,7 +164,7 @@
     </div>
   </charter-site>
   <script type="text/javascript" src="/assets/js/material-components-web.js"></script>
-  <script type="text/javascript" id="cookieinfo" src="/assets/js/cookieinfo.min.js" data-bg="#02162E" data-fg="#FFFFFF" data-link="#FFFFFF" data-divlink="#FFFFFF" data-divlinkbg="#022347" data-moreinfo="/privacy-cookies-policy" data-cookie="CookieInfoScript" data-text-align="left"></script>
+  <script type="text/javascript" id="cookieinfo" src="/assets/js/cookieinfo.min.js" data-bg="#02162E" data-fg="#FFFFFF" data-link="#FFFFFF" data-divlink="#FFFFFF" data-divlinkbg="#022347" data-moreinfo="/privacy-and-cookies" data-cookie="CookieInfoScript" data-text-align="left"></script>
   <script type="text/javascript" src="/assets/js/digitalparticipation/root.js"></script>
   <!--{section:foot}-->
 </body>
