--- a/db/configurations/getinvolved/layouts/default.hbs
+++ b/db/configurations/getinvolved/layouts/default.hbs
@@ -155,7 +155,7 @@
   data-link="#FFFFFF"
   data-divlink="#FFFFFF"
   data-divlinkbg="#138172"
-  data-moreinfo="/privacy-cookies-policy"
+  data-moreinfo="/privacy"
   data-cookie="CookieInfoScript"
   data-text-align="left">
 </script>
