--- a/assets/css/scotlandforeurope-styles.scss
+++ b/assets/css/scotlandforeurope-styles.scss
@@ -72,6 +72,9 @@ main {
   .mdc-temporary-drawer__header-content {
     direction: ltr;
     padding: 0;
+    img.brand-logo-mobile {
+      max-width: 100%;
+    }
   }
   .mdc-temporary-drawer__header:before {
     padding-top: 71%;
