--- a/db/configurations/scotlandforeurope/templates/declaration.hbs
+++ b/db/configurations/scotlandforeurope/templates/declaration.hbs
@@ -13,3 +13,7 @@
     We hereby commit to work with and support people and organisations of all political views and of none to maintain our European Union membership.”
   </p>
 </blockquote>
+
+<p>
+  <a href="/signatories" class="mdc-button mdc-button--raised">View signatories</a>
+</p>
