--- a/assets/css/humanrightsdeclaration-styles.scss
+++ b/assets/css/humanrightsdeclaration-styles.scss
@@ -67,6 +67,52 @@ main {
   box-shadow: $toolbar-shadow-reverse;
 }
 
+.mdc-tab,
+.mdc-button,
+.mdc-form-field,
+.mdc-typography,
+.mdc-card__subtitle,
+.mdc-textfield__input,
+.mdc-typography--body1,
+.mdc-typography--body2,
+.mdc-typography--title,
+.mdc-card__title--large,
+.mdc-typography--caption,
+.mdc-typography--headline,
+.supplimentary-list-title,
+.mdc-card__supporting-text,
+.mdc-typography--subheading2,
+.mdc-simple-menu .mdc-list-item,
+.mdc-temporary-drawer .mdc-list-item,
+.mdc-list {
+  font-family: $base-font-family, Helvetica, Arial, sans-serif;
+  font-weight: $base-font-weight;
+}
+.mdc-temporary-drawer .mdc-list-item {
+  font-weight: 600;
+}
+.mdc-card__title,
+.mdc-textfield__label,
+.mdc-typography--title,
+.mdc-typography--headline,
+.supplimentary-list-title {
+  font-family: $heading-font-family, $base-font-family, Helvetica, Arial, sans-serif;
+  font-weight: $heading-font-weight;
+}
+.mdc-typography {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+a {
+  font-weight: 600;
+  text-decoration: none;
+  text-decoration-skip: ink;
+}
+a:hover {
+  text-decoration: underline;
+}
+
 .mdc-temporary-drawer {
   display: none;
   .mdc-temporary-drawer__header-content {
