--- a/assets/css/scotlandforeurope-styles.scss
+++ b/assets/css/scotlandforeurope-styles.scss
@@ -262,6 +262,7 @@ a:hover {
   text-transform: none;
   line-height: 1.75rem;
   font-size: 1.25rem;
+  font-weight: 600;
   text-align: center;
   display: block;
   width: 100%;
