--- a/db/configurations/getinvolved/layouts/default.hbs
+++ b/db/configurations/getinvolved/layouts/default.hbs
@@ -148,7 +148,7 @@
     </div>
   </scvo-site>
   <script type="text/javascript" src="/assets/js/material-components-web.js"></script>
-  <script type="text/javascript" id="cookieinfo" src="/assets/js/cookieinfo.min.js" data-message="We use cookies to track anonymous usage statistics and do not collect any personal information that can be used to identify you. By continuing to visit this site you agree to our use of cookies." data-moreinfo="/privacy" data-cookie="CookieInfoScript" data-text-align="left"></script>
+  <script type="text/javascript" id="cookieinfo" src="/assets/js/cookieinfo.min.js" data-message="We use cookies to track anonymous usage statistics and do not collect any personal information that can be used to identify you. By continuing to visit this site you agree to our use of cookies." data-moreinfo="/cookies" data-cookie="CookieInfoScript" data-text-align="left"></script>
   <script type="text/javascript" src="/assets/js/getinvolved/root.js"></script>
   <!--{section:foot}-->
 </body>
