--- a/db/configurations/humanrightsdeclaration/layouts/default.hbs
+++ b/db/configurations/humanrightsdeclaration/layouts/default.hbs
@@ -124,10 +124,13 @@
                       <a href="/accessibility">Accessibility</a>
                     </li>
                     <li class="mdc-list-item">
-                      <a href="/privacy-and-cookies">Privacy &amp; cookies policy</a>
+                      <a href="/privacy">Privacy policy</a>
                     </li>
                     <li class="mdc-list-item">
-                      <a href="/terms-and-conditions">Terms &amp; conditions</a>
+                      <a href="/cookies">Cookies policy</a>
+                    </li>
+                    <li class="mdc-list-item">
+                      <a href="/terms">Terms &amp; conditions</a>
                     </li>
                   </ul>
                 </div>
@@ -146,7 +149,7 @@
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-3-desktop">
                   <a href="https://scvo.org" title="Scottish Council for Voluntary Organisations">
-                    <img src="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/scvo.png" alt="Scottish Council for Voluntary Organisations" class="logo scvo" />
+                    <img src="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/logos/scvo.png" alt="Scottish Council for Voluntary Organisations" class="logo scvo" />
                   </a>
                 </div>
               </div>
@@ -157,7 +160,7 @@
     </div>
   </charter-site>
   <script type="text/javascript" src="/assets/js/material-components-web.js"></script>
-  <script type="text/javascript" id="cookieinfo" src="/assets/js/cookieinfo.min.js" data-message="We use cookies to track anonymous usage statistics and do not collect any personal information that can be used to identify you. By continuing to visit this site you agree to our use of cookies." data-moreinfo="/privacy-and-cookies" data-cookie="CookieInfoScript" data-text-align="left"></script>
+  <script type="text/javascript" id="cookieinfo" src="/assets/js/cookieinfo.min.js" data-message="We use cookies to track anonymous usage statistics and do not collect any personal information that can be used to identify you. By continuing to visit this site you agree to our use of cookies." data-moreinfo="/cookies" data-cookie="CookieInfoScript" data-text-align="left"></script>
   <script type="text/javascript" src="/assets/js/humanrightsdeclaration/root.js"></script>
   <!--{section:foot}-->
 </body>
