--- a/db/configurations/digitalparticipation/templates/cookies.hbs
+++ b/db/configurations/digitalparticipation/templates/cookies.hbs
@@ -1,7 +1,7 @@
 <div class="mdc-layout-grid">
   <div class="mdc-layout-grid__inner title">
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-      <h1>How we use cookies</h1>
+      <h3>Cookies policy</h3>
       <h4>What is a cookie?</h4>
       <p>
         A cookie is a small file of letters and numbers that we may store on your browser or the hard drive of your computer or device. They cannot be used to identify you personally.
