--- a/db/configurations/getinvolved/templates/terms.hbs
+++ b/db/configurations/getinvolved/templates/terms.hbs
@@ -21,7 +21,7 @@
 
       <h4>2.&#09;OTHER APPLICABLE TERMS</h4>
 
-      <p>Our <a href="/privacy">Privacy Policy</a> also applies to your use of the Site and contact you make with us through or in connection with the Site or any content on the Site. Our Privacy Policy sets out the terms on which we process any personal data we collect from you, or that you provide to us. By using the Site, you consent to such processing and you warrant that all data provided by you is accurate.</p>
+      <p>Our <a href="/privacy">privacy policy</a> also applies to your use of the Site and contact you make with us through or in connection with the Site or any content on the Site. Our Privacy Policy sets out the terms on which we process any personal data we collect from you, or that you provide to us. By using the Site, you consent to such processing and you warrant that all data provided by you is accurate.</p>
 
       <h4>3.&#09;CHANGES TO THESE TERMS</h4>
 
