--- a/db/configurations/getinvolved/templates/privacy.hbs
+++ b/db/configurations/getinvolved/templates/privacy.hbs
@@ -3,6 +3,114 @@
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
       <h1>Privacy policy</h1>
       <p>
+        <strong>The privacy notice for this website it currently being updated to comply with GDPR but we do not plan to make any material changes to the way we deal with information collected on this site. The new privacy notice will replace this one by 1 June 2018</strong>
+      </p>
+      <h4>1. INTRODUCTION</h4>
+
+      <p>The website, <a href="/">getinvolved.scot</a> (the "<strong>Site</strong>”) is operated by or on behalf of the Scottish Council for Voluntary Organisations ("<strong>SCVO</strong>"). We are committed to protecting and respecting your privacy.</p>
+
+      <p>This privacy policy (the "<strong>Policy</strong>") (together with the website <a href="/terms">terms and conditions</a> (the "<strong>Terms</strong>") and any other documents referred to within the Terms) sets out the basis on which any personal data we collect from you, or that you provide to us, will be processed by us. Please read the following carefully to understand our views and practices regarding your personal data and how we will treat it.</p>
+
+      <p>For the purpose of the Data Protection Act 1998 (the “<strong>Act</strong>"), the data controller is the Scottish Council for Voluntary Organisations of Mansfield Traquair Centre, 15 Mansfield Place, Edinburgh, EH3 6BB.</p>
+
+      <p>In this Policy, when we refer to "you", we are referring to you, as the person or entity accessing, viewing and/or using the Site. Any reference to "we", "our", "us" is a reference to SCVO.</p>
+
+      <h4>2. INFORMATION WE MAY COLLECT FROM YOU</h4>
+
+      <p>We only collect limited data about you on the Site. We may collect and process the following data about you:</p>
+
+      <ul>
+        <li>Details of your visits to the Site including, but not limited to, traffic data, location data, weblogs and other ccommunication data, and the resources that you access.</li>
+        <li>If you contact us, we may keep a record of that correspondence or call and any information that we collect and which is voluntarily given by you when you contact us, including any personal details for example your email address, name and telephone number.</li>
+      </ul>
+
+      <h4>3. IP ADDRESSES</h4>
+      <p>The information we collect via the Site may include your IP address: this is the individual identification number that is assigned to your computer when it is connected to the Internet.</p>
+
+      <h4>4. COOKIES AND OTHER TRACKING TECHNOLOGIES</h4>
+
+      <p>A cookie is a small file of letters and numbers that we store on your browser or the hard drive of your computer if you agree. Cookies contain information that is transferred to your computer's hard drive.</p>
+      <p>The Site uses cookies to distinguish you from other users on the Site. This helps us to provide you with a good experience when you access and use the Site and also allows us to improve the Site. By continuing to access the Site, you are agreeing to our use of cookies.</p>
+      <p>We use the following cookies:</p>
+      <ul>
+        <li>Strictly necessary cookies - these are cookies that are required for the operation of the Site. They include, for example, cookies that enable you to log into secure areas of the Site.</li>
+        <li>Analytical/performance cookies - these allow us to recognise and count the number of users and to see how users move around the Site when they are using it. This helps us to improve the way the Site works, for example, by ensuring users are finding what they are looking for easily.</li>
+        <li>Functionality cookies - these are used to recognise you when you return to the Site. This enables us too personalise our content for you and remember your preferences.</li>
+      </ul>
+      <p>You can find more information about the individual cookies we use and the purposes for which we use them in the table below:</p>
+
+      <table class="responsive-table bordered">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Expiration</th>
+            <th>More Information</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>CookieInfoScript</td>
+            <td>No expiry</td>
+            <td>A Boolean value used to remember if the user has accepted the Cookie policy</td>
+          </tr>
+          <tr>
+            <td>__utma</td>
+            <td>2 Years</td>
+            <td rowspan="5">Used for Google Analytics</td>
+          </tr>
+          <tr>
+            <td>__utmb</td>
+            <td>1 Hour</td>
+          </tr>
+          <tr>
+            <td>__utmc</td>
+            <td>Duration of Session</td>
+          </tr>
+          <tr>
+            <td>__utmt</td>
+            <td>1 Hour</td>
+          </tr>
+          <tr>
+            <td>__utmz</td>
+            <td>1 Year</td>
+          </tr>
+        </tbody>
+      </table>
+
+      <p>Please note that third parties (including, for example, advertising networks and providers of external services like web traffic analysis services) may also use cookies, over which we have no control. These cookies are likely to be analytical/performance cookies or targeting cookies.</p>
+      <p>You block cookies by activating the setting on your browser that allows you to refuse the setting of all or some cookies. However, if you use your browser settings to block all cookies (including essential cookies) you may not be able to access all or parts of the Site.</p>
+
+      <h4>5. WHERE WE STORE YOUR PERSONAL DATA</h4>
+      <p>The information which we collect about you will be stored on a UK based secure server.</p>
+      <p>Unfortunately, the transmission of information via the internet is not completely secure. Although we will do our best to protect your personal data, we cannot guarantee the security of your data transmitted to the Site; any transmission is at your own risk. Once we have received your information, we will use strict procedures and security features to try to prevent unauthorised access.</p>
+
+      <h4>6. USES MADE OF THE INFORMATION</h4>
+      <p>We use information held about you in the following ways:</p>
+      <ul>
+        <li>to administer the Site and to help you use the Site;</li>
+        <li>to allow us to contact you (but only where you have contacted us first or asked us to contact you); and</li>
+        <li>to carry out statistical analysis.</li>
+      </ul>
+      <p>If you do not want us to use your data in this way, please contact Ann Rowe at <a href="mailto:ann.rowe@scvo.org.uk">ann.rowe@scvo.org.uk</a> or <a href="tel:01314746185">0131-474 6185</a>.</p>
+
+      <h4>7. DISCLOSURE OF YOUR INFORMATION</h4>
+      <p>We may disclose information about you to law enforcement officials in the investigation of any alleged unlawful activities by you. We may also be required to disclose information to a court or regulatory body when required to do so by law.</p>
+      <p>We may also share your information with our service provider (to help manage the Site and provide services) and with any person or organisation (and their advisers) who might take over the services provided by the Site to allow them to prepare for taking over (after that, we may also allow that person or organisation to use and share your information on the same basis as us).</p>
+      <p>We will not share your information with any other third party.</p>
+
+      <h4>8. YOUR RIGHTS</h4>
+      <p>The Site may, from time to time, contain links to and from other websites. If you follow a link to any of those other websites, please note that those websites may have their own privacy policies and that we do not accept any responsibility or liability for those policies. Please check those policies before you submit any personal data to those websites.</p>
+
+      <h4>9. ACCESS TO INFORMATION</h4>
+      <p>You have the right to request a copy of personal information that we hold about you. To do this, simply write to Ann Rowe, Head of Communications &amp; Information, SCVO, Mansfield Traquair Centre, 15 Mansfield Place, Edinburgh, EH3 6BB enclosing a cheque payable to the Scottish Council for Voluntary Organisations for the sum of £10 to cover administrative costs. Should we be prevented from disclosing your personal information, reasons will be given for the refusal. We may also request that you provide further information and identification to enable your request to be processed.</p>
+      <p>If you believe that any information we hold about you is incorrect or incomplete, please write to the above address or e-mail Ann Rowe at <a href="mailto:ann.rowe@scvo.org.uk">ann.rowe@scvo.org.uk</a>. We will thereafter correct any information found to be incorrect. You can find detailed information about your rights under UK Data Protection legislation on the UK Information Commissioner’s website: <a href="http://www.ico.org.uk">http://www.ico.org.uk</a>.</p>
+
+      <h4>10. CHANGES TO OUR PRIVACY POLICY</h4>
+      <p>We may change this policy from time to time. Any changes we may make to our privacy policy in the future will be posted on the Site and, where appropriate, notified to you by e-mail.</p>
+
+      <h4>11. CONTACT</h4>
+      <p>Questions, comments and requests regarding this privacy policy are welcomed and should be addressed to <a href="mailto:ann.rowe@scvo.org.uk">ann.rowe@scvo.org.uk</a> or directed to <a href="tel:01314746185">0131-474-6185</a>.</p>
+      <!-- <p>
         Simply by browsing this website, SCVO will not record any personal data about you except your IP address.
       </p>
       <p>
@@ -35,7 +143,7 @@
       <h4>Your right to complain</h4>
       <p>
         If you have a complaint about our use of your information, you can contact the Information Commissioner's Office online at <a href="https://ico.org.uk/concerns">https://ico.org.uk/concerns</a> or by phone on 0303 123 1113.
-      </p>
+      </p> -->
     </div>
   </div>
 </div>
