--- a/db/configurations/humanrightsdeclaration/templates/cookies.hbs
+++ b/db/configurations/humanrightsdeclaration/templates/cookies.hbs
@@ -18,13 +18,17 @@
         <li>measuring how many people are using services, so they can be made easier to use and there’s enough capacity to ensure they are fast</li>
       </ul>
       <h4>Types of cookies used</h4>
-      The Site uses the following types of cookies:
+      <p>
+        The Site uses the following types of cookies:
+      </p>
       <ul>
         <li>Session cookie – this type of cookie allows websites to link the actions of a user during a browser session so that the website is able to store certain information whilst the user is browsing the site.</li>
         <li>Google Analytics cookies – Google Analytics sets cookies to help us accurately estimate the number of visitors to the Site and volumes of usage. This is to ensure that the service is available when you want it and fast.</li>
       </ul>
-      You can find more detailed information about the individual cookies we use and the purposes for which we use them in the tables below:
-      <h4>Session cookie –  for managing your current visit</h4>
+      <p>
+        You can find more detailed information about the individual cookies we use and the purposes for which we use them in the tables below:
+      </p>
+      <h4>Cookie Info Script cookie</h4>
       <table>
         <tbody>
           <tr>
@@ -34,15 +38,17 @@
             <td><b><i>Expires</i></b></td>
           </tr>
           <tr>
-            <td>PHPSESSID</td>
-            <td>Randomly generated number</td>
-            <td>This essential site cookie is used to hold the unique session ID which is generated every time our site is visited. This cookie is deleted when you close the browser.</td>
-            <td>At end of session</td>
+            <td>CookieInfoScript</td>
+            <td>1</td>
+            <td>A Boolean value used to remember if the user has accepted the Cookie policy</td>
+            <td>No expiry</td>
           </tr>
         </tbody>
       </table>
       <h4>Google Analytics cookies</h4>
-      The information from the following cookies will be used by Google in accordance with Google’s <a href="http://www.google.co.uk/intl/en/policies/privacy/">privacy policy</a>. For more information on the cookies set by Google Analytics please refer to the <a href="https://developers.google.com/analytics/resources/concepts/gaConceptsCookies">Google Analytics</a> website:
+      <p>
+        The information from the following cookies will be used by Google in accordance with Google’s <a href="http://www.google.co.uk/intl/en/policies/privacy/">privacy policy</a>. For more information on the cookies set by Google Analytics please refer to the <a href="https://developers.google.com/analytics/resources/concepts/gaConceptsCookies">Google Analytics</a> website:
+      </p>
       <table>
         <tbody>
           <tr>
