--- a/db/configurations/scvo/templates/events/event-booking.hbs
+++ b/db/configurations/scvo/templates/events/event-booking.hbs
@@ -20,6 +20,9 @@
           <iframe src="https://www.surveygizmo.eu/s3/90066146/Event-Booking-Events?sfid={{Id}}" frameborder="0" width="100%" height="400" style="overflow:hidden"></iframe>
           {{/compare ~}}
           {{/if}}
+          <p>
+            <strong>The information you provide will be stored in our database to allow us to respond to your booking request. <a href="/privacy/training-and-events" target="_blank">Read our full privacy notice</a>.</strong>
+          </p>
         </div>
       </div>
     </div>
