--- a/db/configurations/scvo/templates/events/event-cjs-booking.hbs
+++ b/db/configurations/scvo/templates/events/event-cjs-booking.hbs
@@ -14,6 +14,9 @@
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone content event-content">
           <p><strong>BOOKING FORM NOT YET SET UP</strong></p>
+          <p>
+            <strong>The information you provide will be stored in our database to allow us to respond to your booking request. <a href="/privacy/training-and-events" target="_blank">Read our full privacy notice</a>.</strong>
+          </p>
         </div>
       </div>
     </div>
