Fix wording mistake

--- a/db/configurations/digitalparticipation/templates/skill-up-detail.hbs
+++ b/db/configurations/digitalparticipation/templates/skill-up-detail.hbs
@@ -82,7 +82,7 @@
           </div>
           <div class="mdc-layout-grid__cell collapsible-body">
             <ul>
-              <li>I understand the confirm with my organisation’s IT and social media policies</li>
+              <li>I understand and conform to my organisation’s IT and social media policies</li>
               <li>I can comply with my organisation’s security protocols when accessing my email or working remotely</li>
               <li>I can communicate in an appropriate way for my organisation by using email, online and collaborative digital tools.</li>
               <li>I can use digital collaboration tools to meet with, share and collaborate with colleagues</li>
